# ColinDev-C-Projects

./: CMakeLists.txt  README.md
cplibrary/: README.md  cpl.h
cpstd/: CMakeLists.txt  README.md  arena.c  arena.h  bitarr.c  cpbitarr.c  cpbitarr.h  cphash.c  cphash.h  cpmath.h  cpqueue.h  cpqueue_new.c  cpqueue_new.h  cpvec.c  cpvec.h  cpvec_new.h  hashmap.c  hashmap.h  how_to_use.txt  mathplus.c  mathplus.h  queue.c  rand.c  rand.h  strings.c  strings.h  vector.c  vector.h
src/: hash_test.c  test.c  vec2.c
